# killswitch

./: .gitignore  CONCEPT.md  DEMO_SCRIPT.md  Makefile  PITCH_DECK.md  POST_HACKATHON.md  PROGRESS.md  README.md  RESEARCH.md  STRUCTURE.md  USER_FLOW.md  docker-compose.yml
.kiro/specs/killswitch-backend/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/killswitch-frontend/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: killswitch-project.md
backend/: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  main.py  requirements.txt
backend/app/: __init__.py  constants.py
backend/scripts/: simulate_attack.py
backend/seeds/: __init__.py  __main__.py  seed.py
contracts/guardian/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
contracts/guardian/programs/guardian/: Cargo.toml
contracts/guardian/programs/guardian/src/: constants.rs  error.rs  lib.rs
contracts/guardian/programs/guardian/src/instructions/: add_invariant.rs  mod.rs  register_protocol.rs  remove_invariant.rs  resume.rs  trigger_pause.rs  update_config.rs
contracts/guardian/programs/guardian/src/state/: invariant_rule.rs  mod.rs  protocol_config.rs
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/constants/: index.ts  invariant-types.ts  landing.ts  nav.ts
frontend/hooks/: use-simulation.ts  use-websocket.ts
frontend/lib/: api.ts  utils.ts
frontend/types/: api.ts  incident.ts  index.ts  invariant.ts  protocol.ts
(+67 files in other folders)
