[package]
name = "guardian"
version = "0.1.0"
description = "Killswitch Guardian Program — On-chain circuit breaker for Solana DeFi protocols"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "guardian"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
